--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
   <style>
+    * {
+      user-select: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      -webkit-user-drag: none;
+      -webkit-tap-highlight-color: transparent;
+    }
+    
     body {
       display: flex;
       justify-content: center;
@@ -25,6 +34,9 @@
       width: 100%;
       height: 100%;
       object-fit: contain;
+      pointer-events: none;
+      user-drag: none;
+      -webkit-user-drag: none;
     }
 
     .string-container {
@@ -39,6 +51,7 @@
 
     .string {
       position: absolute;
+      top: 150%;
       width: 100%;
       background: #e5e7eb;
       border-radius: 4px;
@@ -80,7 +93,8 @@
 
     .answer {
       position: absolute;
-      top: 50%;
+      /* top: 50%; */
+      top: -10%;
       left: 50%;
       transform: translate(-50%, -50%);
       background: rgba(255, 255, 255, 0.9);
